Widen and deepen the Java SE 21 column for CS-major readers.
Add four missing advanced topics with original diagrams: reflection
and JDK Proxy (interfaces only, forName initialization), AQS
(ReentrantLock state as hold count, fair vs nonfair),
CompletableFuture (commonPool, thenCompose, cancel does not
interrupt), and NIO vs virtual threads (short writes, when Selector
is still warranted).

Thicken existing articles at the actual gaps: javap of boxing,
invoke* and bridge methods, HashMap treeifyBin vs resize,
ArrayList.grow, charset and serialVersionUID, BlockingQueue HB,
JIT deopt and escape analysis, SPI/TCCL loaders, hand-written
Collector. Replace the HTTP task-service code wall with compilable
src/ and design-only docs. Interview follow-ups cover the new
topics with numbers that can be said out loud.